<resources>
    <string name="app_name">Calculator</string>
    <string name="university">The American University in Cairo</string>
    <string name="major">Major: Computer Engineering</string>
    <string name="standing">Class Standing: Senior</string>
    <string name="email">Email: omarmohey@aucegypt.edu</string>
    <string name="phone">Phone: +201063020870</string>
    <string name="developer">Developed by: \nOmar Moheyeldin\nMohamed</string>
    <string name="start_button">Start</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="multipy">X</string>
    <string name="clear">C</string>
    <string name="plus_minus">+/-</string>
    <string name="divide">/</string>
    <string name="modulus">%</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="decimal">.</string>
</resources>